--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
+<!--
+Författare: Leander Norberg
+Projketnamn: Moment 3
+Beskrivning: Praktisk laboration utvecklat i samband med kursen 
+Programmering i TypeScript (DT208G ) vid mittuniversitetet, VT2025 
+-->
+
 <!doctype html>
-<html lang="en">
+<html lang="sv">
 <head>
-  <meta charset="utf-8">
-  <title>Moment4</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Moment 4, DT208G</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
 </body>
 </html>
